--- a/templates/home.html
+++ b/templates/home.html
@@ -1,54 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fund Raiser</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
-      h1 {
-        font-family: 'Roboto', sans-serif;
-        font-size: 45px;
-        text-align: center;
-      }
-      #cover {
-        width: 100%;
+      #banner {
         height: 350px;
-        object-fit: cover;
-      }
-      h2 {
-        text-align: center; 
-        font-family: 'Roboto', sans-serif;
-        font-size: 25px;
-      }
-      #container {
-        max-width: 80%;
-        margin: 0 auto
+        width: 100%;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-      <h1>
+    <div class="container">
+      <h1 class="text-center mt-3 mb-4">
         Fund Raiser
       </h1>
-      <img id="cover" src="https://0c1f6d56-285b-4a45-979b-b2a81b6648fc-00-1i91r2gzxlrn7.sisko.replit.dev/static/tempCover.jpg" alt="Donations">
-      <h2>
+      <img id="banner" class="img-fluid" src="https://0c1f6d56-285b-4a45-979b-b2a81b6648fc-00-1i91r2gzxlrn7.sisko.replit.dev/static/tempCover.jpg" alt="Donations">
+      <h2 class="text-center my-4">
         About Fund Raiser
       </h2>
-      <p>
+      <p class="lead">
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
       </p>
-      <h2>
+      <h2 class="text-center my-4">
         Be a part of the change
       </h2>
       <p>
-        Todo : Donation ask listings
+        {% for job in jobs %}
+        {% include "jobItem.html" %}
+        {% endfor %}
       </p>
-      <div style="text-align:center;">
-        <button>
+      <div class="text-center">
+        <button class="btn btn-primary btn-md">
           Contact Us
         </button>
-        <p>Copyright 2024, Fund Rasier</p>
+        <p class="mt-4"><a href="/api/jobs">Copyright 2024, Fund Rasier</a></p>
       </div>
-
     </div>
   </body>
 </html>
