--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,7 @@
       #banner {
         height: 350px;
         width: 100%;
+        object-fit: cover;
       }
     </style>
   </head>
@@ -17,7 +18,7 @@
       <h1 class="text-center mt-3 mb-4">
         Fund Raiser
       </h1>
-      <img id="banner" class="img-fluid" src="https://0c1f6d56-285b-4a45-979b-b2a81b6648fc-00-1i91r2gzxlrn7.sisko.replit.dev/static/tempCover.jpg" alt="Donations">
+      <img id="banner" class="img-fluid" src="https://0c1f6d56-285b-4a45-979b-b2a81b6648fc-00-1i91r2gzxlrn7.sisko.replit.dev/static/donate.jpg" alt="Donations">
       <h2 class="text-center my-4">
         About Fund Raiser
       </h2>
