--- a/templates/home.html
+++ b/templates/home.html
@@ -14,17 +14,25 @@
     </style>
   </head>
   <body>
+    {% include "navBar.html" %}
+    <!-- <h1 class="text-center mt-4 mb-4">
+      Fund Raiser
+    </h1> -->
+    <img id="banner" class="img-fluid" src="/static/donate.jpg" alt="savings image">
     <div class="container">
-      <h1 class="text-center mt-3 mb-4">
-        Fund Raiser
-      </h1>
-      <img id="banner" class="img-fluid" src="https://0c1f6d56-285b-4a45-979b-b2a81b6648fc-00-1i91r2gzxlrn7.sisko.replit.dev/static/donate.jpg" alt="Donations">
       <h2 class="text-center my-4">
         About Fund Raiser
       </h2>
-      <p class="lead">
-        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-      </p>
+      <div class="row">
+        <div class="col-md-6">
+          <p class="lead">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+          </p>
+        </div>
+        <div class="d-md-none d-lg-block col-md-6 ml-5">
+          <img src="/static/jobs.jpg" alt="jobs image" style="height:400px; border-radius:10px;">
+        </div>
+      </div>
       <h2 class="text-center my-4">
         Be a part of the change
       </h2>
@@ -33,12 +41,7 @@
         {% include "jobItem.html" %}
         {% endfor %}
       </p>
-      <div class="text-center">
-        <button class="btn btn-primary btn-md">
-          Contact Us
-        </button>
-        <p class="mt-4"><a href="/api/jobs">Copyright 2024, Fund Rasier</a></p>
-      </div>
     </div>
+    {% include "footer.html" %}
   </body>
 </html>
