--- a/templates/jobItem.html
+++ b/templates/jobItem.html
@@ -12,6 +12,6 @@
     </div>
   </div>
   <div class="col-3">
-    <button type="button" class="btn btn-outline-primary">Apply</button>
+    <a href=" mailto:manan3344sharma@gmail.com?subject=Application%20for%20{{job['title']}}&body=My%20Linkedin%20profile%3A%20%3CYour%20Linkedin%20profile%20link%3E%0D%0AMy%20GitHub%20profile%3A%20%3CYour%20GitHub%20profile%20link%3E%0D%0AMy%20CodeChef%20profile%3A%20%3CYour%20CodeChef%20profile%20link%3E " type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
