--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
       <div class="row">
         <div class="col-md-6">
           <p class="lead">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            Crowdfunding leverages the power of social networks and the internet to give people the means to raise funds for medical and social causes. With crowdfunding, you can receive donations from friends, family, colleagues, and even strangers. Crowdfunding leverages the power of social networks and the internet to give people the means to raise funds for medical and social causes. With crowdfunding, you can receive donations from friends, family, colleagues, and even strangers. Crowdfunding leverages the power of social networks and the internet to give people the means to raise funds for medical and social causes. With crowdfunding, you can receive donations from friends, family, colleagues, and even strangers.
           </p>
         </div>
         <div class="d-md-none d-lg-block col-md-6 ml-5">
